Fri Mar 10 04:39:45 GMT 2006  Olly Betts <olly@survex.com>

	* backends/quartz/btree.cc,backends/quartz/btree.h: Btree::find_key()
	  is unused so remove it.

Fri Mar 10 04:29:46 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING: Note that we now use a lightly patched version of libtool
	  1.5.22.

Fri Mar 10 02:55:48 GMT 2006  Olly Betts <olly@survex.com>

	* docs/overview.html: Bring up to date.

Wed Mar 08 02:32:49 GMT 2006  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony: Fix FLAG_BOOLEAN_ANY_CASE to really
	  allow any case combination - previously it only allowed all
	  uppercase or all lowercase.
	* tests/queryparsertest.cc: Add feature and regression tests for
	  FLAG_BOOLEAN_ANY_CASE.
	* tests/queryparsertest.cc: Rename test cases to more descriptive
	  names.

Tue Mar 07 19:59:54 GMT 2006  Olly Betts <olly@survex.com>

	* queryparser/queryparser.lemony,tests/queryparsertest.cc:
	  Fix QueryParser's handling of terms with trailing "#", "+",
	  or "-" when set_database has been called and the term doesn't
	  exist in the database with the suffix.

Tue Feb 21 21:14:22 GMT 2006  Olly Betts <olly@survex.com>

	* include/xapian/deprecated.h: Allow xapian-bindings to override
	  deprecation warnings.

Tue Feb 21 17:55:17 GMT 2006  Olly Betts <olly@survex.com>

	* backends/flint/flint_database.cc: Note that "flicklock" should be
	  "flintlock"!

Tue Feb 21 14:13:08 GMT 2006  Olly Betts <olly@survex.com>

	* PLATFORMS: Updated.

Tue Feb 21 14:12:47 GMT 2006  Olly Betts <olly@survex.com>

	* HACKING: Update the "how to do a release" list.

Tue Feb 21 00:17:40 GMT 2006  Olly Betts <olly@survex.com>

	* NEWS,PLATFORMS,configure.ac: Updated for 0.9.4.

Mon Feb 20 21:15:46 GMT 2006  Olly Betts <olly@survex.com>

	* api/omdocument.cc,api/omenquire.cc,api/omquery.cc,include/xapian/,
	  queryparser/queryparser.cc: GCC 3.2 actually doesn't like
	  __attribute__((deprecated)) on method definitions, so just