@@ -1,8 +1,7 @@
 /* bcursor.h: Interface to Btree cursors
  *
- * ----START-LICENCE----
  * Copyright 1999,2000,2001 BrightStation PLC
- * Copyright 2002,2003,2004 Olly Betts
+ * Copyright 2002,2003,2004,2006 Olly Betts
  *
  * This program is free software; you can redistribute it and/or
  * modify it under the terms of the GNU General Public License as
@@ -16,9 +15,8 @@
  *
  * You should have received a copy of the GNU General Public License
  * along with this program; if not, write to the Free Software
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307
+ * Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301
  * USA
- * -----END-LICENCE-----
  */
 
 #ifndef OM_HGUARD_BCURSOR_H
@@ -109,7 +107,7 @@ class Bcursor {
 	 *    string key;
 	 *
 	 *    // Now do something to each key in the Btree
-         *    BC.find_key(""); // must give result true
+	 *    BC.find_entry(""); // must give result true
 	 *
 	 *    while (BC.next()) {
 	 *        BC.get_key(&key)) {
